# sntpc_embassy

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: main.rs  time.rs  wifi.rs
