[package]
name = "h2o-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
# embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
# embassy-usb-logger = { version = "0.1.0" }
embassy-lora = { version = "0.1.0", features = ["time", "defmt"] }
lora-phy = { version = "2" }
lorawan-device = { version = "0.11.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.4", default-features = false, features = ["default-crypto"] }
cyw43 = { features = ["defmt", "firmware-logs"] }
cyw43-pio = { features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = { version = "0.7.15", features = ["serde"] }
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"

thiserror-no-std = "2.0"
sntpc = { git = "https://github.com/vpikulik/sntpc.git", rev = "3684744", features = ["async"], default-features = false }
no-std-net = "0.6"
chrono = { version = "0.4", default-features = false}


[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
# embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
# embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-lora = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "42176b1" }

[profile.release]
debug = 2
